crates/tesshir/tests/fixtures/check/duplicate_concrete_impl.golden
Error: check/duplicate_concrete_impl.tess:11:1: conflicting impl of `Reader` for `File`
