crates/tesshir/tests/fixtures/check/duplicate_concrete_impl.tess
interface Reader {
    fn read(self: &Self) -> i32;
}

struct File {}

impl Reader for File {
    fn read(self: &Self) -> i32 { 0 }
}

impl Reader for File {
    fn read(self: &Self) -> i32 { 0 }
}
